# hpp_wholebody_step_planner_bridge

./: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
include/hpp/wholebody_step_planner/bridge/: pattern-generator.hh
src/: path-parser.cc  pattern-generator.cc  trajectory-writer.cc
src/nodes/: generator.cpp
test/: humanoid_walk.vcg
